canary/dstrategies-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dstrategies-frontend
    version: v1
  name: dstrategies-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dstrategies-frontend
  template:
    metadata:
      labels:
        name: dstrategies-frontend
        app: dstrategies-frontend
        version: v1
    spec:
      containers:
      - image: 'quay.io/acidonpe/dstrategies-frontend:latest'
        imagePullPolicy: Always
        name: dstrategies-frontend
        ports:
          - containerPort: 3000
            protocol: TCP
        resources: {}
