canary/dstrategies-back-service-online.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dstrategies-back-online
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dstrategies-back
