canary/dstrategies-frontend-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dstrategies-frontend
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: dstrategies-frontend
    weight: 100
  wildcardPolicy: None
